feat: Correct project namd, id; deps: Bump API version

--- a/build.gradle
+++ b/build.gradle
@@ -4,26 +4,26 @@ plugins {
 }
 
 // Set project version using a property, defaulting to 'unspecified' if not found
-version = project.properties[project.name + '.version'] ?: 'undefined'
+version = project.properties[project.name + '.version']
 group = 'io.github.mcengine'
 
 ext {
     // User
-    user_git_name = System.getenv('USER_GIT_NAME') ?: ''
+    user_git_name = System.getenv('USER_GIT_NAME')
 
     // GitHub
-    user_github_token = System.getenv('USER_GITHUB_TOKEN') ?: ''
+    user_github_token = System.getenv('USER_GITHUB_TOKEN')
 
     // Organization
     organization_name = System.getenv('ORGANIZATION_NAME') ?: 'MCEngine'
-    organization_token = System.getenv('ORGANIZATION_TOKEN') ?: ''
+    organization_token = System.getenv('ORGANIZATION_TOKEN')
 
     // Repository
-    repository_name = System.getenv('REPOSITORY_NAME') ?: 'currency'
-    repository_token = System.getenv('REPOSITORY_TOKEN') ?: ''
+    repository_name = System.getenv('REPOSITORY_NAME') ?: 'dlc-engine'
+    repository_token = System.getenv('REPOSITORY_TOKEN')
 
     /* Project Information */
-    jarName = System.getenv('PROJECT_NAME') ?: 'MCEngineCurrency'
+    jarName = System.getenv('PROJECT_NAME') ?: 'MCEngineDLC'
 }
 
 allprojects {
@@ -52,22 +52,20 @@ allprojects {
         maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
         maven { url 'https://oss.sonatype.org/content/repositories/central' }
 
-        maven {
-            name = 'MCEngine API'
-            url = uri('https://maven.pkg.github.com/MCEngine/mcengine-api')
-            credentials {
-                username = project.user_git_name
-                password = project.user_github_token ?: project.repository_token ?: project.organization_token
+        ext.configureGitHubRepo = { repoName, repoUrl ->
+            maven {
+                name = repoName
+                url = uri(repoUrl)
+                credentials {
+                    username = project.user_git_name
+                    password = project.user_github_token ?: project.repository_token ?: project.organization_token
+                }
             }
         }
-        maven {
-            name = 'MCEngine Currency API'
-            url = uri('https://maven.pkg.github.com/MCEngine/currency-api')
-            credentials {
-                username = project.user_git_name
-                password = project.user_github_token ?: project.repository_token ?: project.organization_token
-            }
-        }
+
+        configureGitHubRepo('MCEngine Core API', 'https://maven.pkg.github.com/MCEngine/core-api')
+        configureGitHubRepo('MCEngine DLC API', 'https://maven.pkg.github.com/MCEngine/dlc-api')
+        configureGitHubRepo('MCEngine DLC Common', 'https://maven.pkg.github.com/MCEngine/dlc-common')
     }
 }
 
@@ -85,7 +83,7 @@ subprojects {
     }
 
     versionPropertyKey += '.version'
-    version = project.properties[versionPropertyKey] ?: 'undefined'
+    version = project.properties[versionPropertyKey]
 
     tasks.named('jar').configure {
         enabled = false
@@ -102,12 +100,6 @@ subprojects {
                 def platformDir = rootProject.file("server/${platform}")
                 if (platformDir.exists()) {
                     dependencies {
-                        // Add :common with 'shadow' configuration if it exists
-                        def commonProject = project.findProject(":common")
-                        if (commonProject != null) {
-                            implementation project(path: ":common", configuration: "shadow")
-                        }
-
                         // Add versioned platform projects with 'shadow' configuration
                         platformDir.eachDir { versionDir ->
                             if (versionDir.name != 'engine') {
